--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -49,35 +49,40 @@ spec:
                 secretKeyRef:
                   name: elasticsearch-secret
                   key: elastic-password
-            # FIXED: Security enabled hona chahiye agar ES secure hai
             - name: xpack.security.enabled
-              value: "true" 
+              value: "true"
+            # MANDATORY: Kibana 9.x migrations ke liye 32-char keys
+            - name: xpack.security.encryptionKey
+              value: "vps9cedd984securekeykibana32char"
+            - name: xpack.encryptedSavedObjects.encryptionKey
+              value: "vps9cedd984securekeykibana32char"
+            - name: xpack.reporting.encryptionKey
+              value: "vps9cedd984securekeykibana32char"
             - name: NODE_OPTIONS
-              value: "--max-old-space-size=1536"
+              value: "--max-old-space-size=2048"
           resources:
             requests:
-              memory: 1.5Gi # Thoda badha diya startup ke liye
+              memory: 2Gi
               cpu: 500m
             limits:
-              memory: 3Gi # Proper prod limits
+              memory: 4Gi # Memory badha di taaki optimize phase mein crash na ho
               cpu: 1000m
           ports:
             - containerPort: 5601
               name: kibana
           readinessProbe:
-            # FIXED: Migrations ke liye 3 minute ka wait
-            initialDelaySeconds: 180 
-            periodSeconds: 10
+            initialDelaySeconds: 120 # 2 min migration wait
+            periodSeconds: 15
             timeoutSeconds: 5
-            failureThreshold: 10 # Zyada tolerance
+            failureThreshold: 10
             httpGet:
               path: /api/status
               port: 5601
           livenessProbe:
-            initialDelaySeconds: 300
+            initialDelaySeconds: 600 # 10 min tak pod ko kill nahi karega K8s
             periodSeconds: 30
             timeoutSeconds: 5
-            failureThreshold: 5
+            failureThreshold: 3
             httpGet:
               path: /api/status
               port: 5601
@@ -88,3 +93,18 @@ spec:
         - name: kibana-data
           persistentVolumeClaim:
             claimName: kibana-data
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kibana
+  namespace: common
+spec:
+  type: ClusterIP
+  selector:
+    app: kibana
+  ports:
+    - port: 5601
+      targetPort: 5601
+      name: kibana
