--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -40,59 +40,26 @@ spec:
         - name: kibana
           image: docker.elastic.co/kibana/kibana:9.2.3
           env:
-            - name: ELASTICSEARCH_HOSTS
-              value: "http://elasticsearch:9200"
-            - name: ELASTICSEARCH_USERNAME
-              value: "admin"
             - name: ELASTICSEARCH_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: elasticsearch-secret
                   key: elastic-password
-            - name: xpack.security.enabled
-              value: "true"
-            # MANDATORY: Kibana 9.x migrations ke liye 32-char keys
-            - name: xpack.security.encryptionKey
-              value: "vps9cedd984securekeykibana32char"
-            - name: xpack.encryptedSavedObjects.encryptionKey
-              value: "vps9cedd984securekeykibana32char"
-            - name: xpack.reporting.encryptionKey
-              value: "vps9cedd984securekeykibana32char"
             - name: NODE_OPTIONS
               value: "--max-old-space-size=2048"
-          resources:
-            requests:
-              memory: 2Gi
-              cpu: 500m
-            limits:
-              memory: 4Gi # Memory badha di taaki optimize phase mein crash na ho
-              cpu: 1000m
-          ports:
-            - containerPort: 5601
-              name: kibana
-          readinessProbe:
-            initialDelaySeconds: 120 # 2 min migration wait
-            periodSeconds: 15
-            timeoutSeconds: 5
-            failureThreshold: 10
-            httpGet:
-              path: /api/status
-              port: 5601
-          livenessProbe:
-            initialDelaySeconds: 600 # 10 min tak pod ko kill nahi karega K8s
-            periodSeconds: 30
-            timeoutSeconds: 5
-            failureThreshold: 3
-            httpGet:
-              path: /api/status
-              port: 5601
           volumeMounts:
             - name: kibana-data
               mountPath: /usr/share/kibana/data
+            - name: kibana-config
+              mountPath: /usr/share/kibana/config/kibana.yml
+              subPath: kibana.yml
       volumes:
         - name: kibana-data
           persistentVolumeClaim:
             claimName: kibana-data
+        - name: kibana-config
+          configMap:
+            name: kibana-config
 
 ---
 apiVersion: v1
