--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -5,11 +5,11 @@ metadata:
   namespace: common
 data:
   kibana.yml: |
+    server.name: kibana
     server.host: '0.0.0.0'
     elasticsearch.hosts: ['http://elasticsearch:9200']
     elasticsearch.username: 'admin'
     elasticsearch.password: '${ELASTICSEARCH_PASSWORD}'
-    xpack.security.enabled: true
     xpack.security.encryptionKey: 'vps9cedd984securekeykibana32char'
     xpack.encryptedSavedObjects.encryptionKey: 'vps9cedd984securekeykibana32char'
     xpack.reporting.encryptionKey: 'vps9cedd984securekeykibana32char'
