--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
 spec:
+  ingressClassName: nginx
   rules:
   - host: kibana.techdeveloper.in
     http:
